--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Government Scheme Recommender</h1>
+    <h1>Scheme Bot</h1>
     <form id="userForm">
         <label for="gender">Gender:</label>
         <select id="gender" required>
