whole code updated

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>SchemeBot - Discover Government Schemes</title>
+    <title>Government Scheme Recommender</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Scheme Bot</h1>
+    <h1>Government Scheme Recommender</h1>
     <form id="userForm">
         <label for="gender">Gender:</label>
         <select id="gender" required>
