--- a/index.html
+++ b/index.html
@@ -7,46 +7,60 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Government Scheme Recommender</h1>
-    <form id="userForm">
-        <label for="gender">Gender:</label>
-        <select id="gender" required>
-            <option value="">Select</option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-            <option value="Other">Other</option>
-        </select>
+    <div class="container">
+        <h1>Government Scheme Finder</h1>
+        <form id="userForm">
+            <div class="form-group">
+                <label for="gender">Gender</label>
+                <select id="gender" required>
+                    <option value="">Select Gender</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
 
-        <label for="age">Age:</label>
-        <input type="number" id="age" required />
+            <div class="form-group">
+                <label for="age">Age</label>
+                <input type="number" id="age" required />
+            </div>
 
-        <label for="state">State:</label>
-        <input type="text" id="state" required />
+            <div class="form-group">
+                <label for="state">State</label>
+                <input type="text" id="state" required />
+            </div>
 
-        <label for="residence">Residence:</label>
-        <select id="residence" required>
-            <option value="">Select</option>
-            <option value="Urban">Urban</option>
-            <option value="Rural">Rural</option>
-        </select>
+            <div class="form-group">
+                <label for="residence">Residence</label>
+                <select id="residence" required>
+                    <option value="">Select Residence</option>
+                    <option value="Urban">Urban</option>
+                    <option value="Rural">Rural</option>
+                </select>
+            </div>
 
-        <label for="caste">Caste:</label>
-        <select id="caste" required>
-            <option value="">Select</option>
-            <option value="General">General</option>
-            <option value="OBC">OBC</option>
-            <option value="SC">SC</option>
-            <option value="ST">ST</option>
-        </select>
+            <div class="form-group">
+                <label for="caste">Caste</label>
+                <select id="caste" required>
+                    <option value="">Select Caste</option>
+                    <option value="General">General</option>
+                    <option value="OBC">OBC</option>
+                    <option value="SC">SC</option>
+                    <option value="ST">ST</option>
+                </select>
+            </div>
 
-        <label for="qualification">Qualifications:</label>
-        <input type="text" id="qualification" required />
+            <div class="form-group">
+                <label for="qualification">Qualifications</label>
+                <input type="text" id="qualification" required />
+            </div>
 
-        <button type="submit">Get Schemes</button>
-    </form>
+            <button type="submit">Find Eligible Schemes</button>
+        </form>
 
-    <div id="result"></div>
+        <div id="result" class="schemes-container"></div>
+    </div>
 
-    <script src="index.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
