--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Government Scheme Finder</h1>
+        <h1>Government Scheme Finder - find </h1>
         <form id="userForm">
             <div class="form-group">
                 <label for="gender">Gender</label>
