again update index.html file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Government Scheme Recommender - find </title>
+    <title>Government Scheme Recommender</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Government Scheme Finder - find </h1>
+        <h1>Government Scheme Finder</h1>
         <form id="userForm">
             <div class="form-group">
                 <label for="gender">Gender</label>
