--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Scheme Saathi</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Yojana Mitra</title>
+  <link rel="stylesheet" href="index.css">
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <script src="index.js"></script>
+
+  <header>
+    <div class="logo-section">
+      <img src="assets/logo.png" alt="India Logo" width="60"/>
+      <h2 style="color:#2e7d32;">Yojana <span style="color: black;">Mitra</span></h2>
+      <img src="assets/digital-india-logo.png" alt="Digital India" width="140" style="margin-left: -20px;"/>
+    </div>
+    <div class="search-box">
+      <input type="text" placeholder="Enter scheme name to search...">
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="left">
+      <img style="height: 600px; margin-top: -60px;" src="assets/farmer-hero.png" alt="Farmer Image"/>
+    </div>
+    <div class="right">
+      <h1><span>Discover</span> government<br/>schemes for you...</h1>
+      <p>Find Personalised Schemes Based on Eligibility</p>
+      <div class="image-grid">
+        <img src="https://cdn.pixabay.com/photo/2015/07/17/13/44/agriculture-849825_960_720.jpg" alt="Farm"/>
+        <img src="https://cdn.pixabay.com/photo/2018/06/02/17/24/agriculture-3441135_960_720.jpg" alt="Crop"/>
+        <img src="https://cdn.pixabay.com/photo/2015/06/02/06/59/corn-794250_960_720.jpg" alt="Field"/>
+      </div>
+      <br>
+      <button class="cta-button">Find Schemes For You →</button>
+    </div>
+  </section>
+
+  <footer>
+    #GOVERNMENTSCHEMES / #SCHEMESFORYOU
+  </footer>
+
+  <script src="index.js"></script>
 </body>
 </html>
