hero-random-push

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
   <header>
     <div class="logo-section">
-      <img src="assets/logo.png" alt="India Logo" width="100"/>
-      <h2 style="color: #2dd4bf;">Yojana <span style="color: black;">Mitra</span></h2>
-      <!-- <img src="assets/digital-india-logo.png" alt="Digital India" width="120" style="margin-left: -20px;"/> -->
+      <img src="assets/logo.png" alt="India Logo" width="40"/>
+      <h2 style="color: black;" >Yojana <span style="color: #2dd4bf;">Mitra</span></h2>
+      <img src="assets/digital-india-logo.png" alt="Digital India" width="120" style="margin-left: -20px;"/>
     </div>
     <div class="search-box">
       <input type="text" placeholder="Enter scheme name to search...">
@@ -23,7 +23,7 @@
 
   <section class="hero">
     <div class="left">
-      <img style="height: 600px; margin-top: -60px;" src="assets/farmerr-hero.png" alt="Farmer Image"/>
+      <!-- <img style="height: 600px; margin-top: -60px;" src="assets/farmerr-hero.png" alt="Farmer Image"/> -->
     </div>
     <div class="right">
       <h1><span>Discover</span> government<br/>schemes for you...</h1>
