--- a/index.html
+++ b/index.html
@@ -53,6 +53,87 @@
         #GOVERNMENTSCHEMES / #SCHEMESFORYOU
         <button class="cta-button">Find Schemes For You →</button>
       </div>
+
+      <div class="extra-selection">
+        <header>
+          <nav class="nav-tabs">
+            <a href="#" class="active">Categories</a>
+            <a href="#">States/UTs</a>
+            <a href="#">Central Ministries</a>
+          </nav>
+        </header>
+
+        <main>
+          <h1>
+            Find schemes based <br />
+            on categories
+          </h1>
+          <section class="grid">
+            <!-- Sample category card -->
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>451</span> Schemes</p>
+              <h3>Agriculture, Rural & Environment</h3>
+            </div>
+
+            <!-- Repeat cards -->
+            <div class="category">
+              <img src="icons/education.svg" alt="Education Icon" />
+              <p><span>808</span> Schemes</p>
+              <h3>Education & Learning</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/health.svg" alt="Health Icon" />
+              <p><span>218</span> Schemes</p>
+              <h3>Health & Wellness</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Banking Icon" />
+              <p><span>221</span> Schemes</p>
+              <h3>Banking,Financial Services and Insurance</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Housing Icon" />
+              <p><span>92</span> Schemes</p>
+              <h3>Housing & Shelter</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>10</span> Schemes</p>
+              <h3>Public Safety,Law & Justice</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>64</span> Schemes</p>
+              <h3>Science, IT & Communications</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>264</span> Schemes</p>
+              <h3>Skills & Employment</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>37</span> Schemes</p>
+              <h3>Utility & Sanitation</h3>
+            </div>
+
+            <div class="category">
+              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <p><span>116</span> Schemes</p>
+              <h3>Sports & Culture</h3>
+            </div>
+            <!-- Add more categories as needed... -->
+          </section>
+        </main>
+      </div>
     </section>
 
     <script src="index.js"></script>
