below page added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="Navbar">
       <div class="logo-section">
         <img src="assets/logo.png" alt="India Logo" width="40" />
         <h2 style="color: black">
@@ -36,6 +36,7 @@
       </div>
     </header>
 
+    <div class="gradient"></div>
     <section class="hero">
       <div class="left">
         <!-- <img style="height: 600px; margin-top: -60px;" src="assets/farmerr-hero.png" alt="Farmer Image"/> -->
@@ -54,6 +55,10 @@
         <button class="cta-button">Find Schemes For You →</button>
       </div>
 
+      
+    </section>
+
+    <section class="below">
       <div class="extra-selection">
         <header>
           <nav class="nav-tabs">
@@ -69,14 +74,12 @@
             on categories
           </h1>
           <section class="grid">
-            <!-- Sample category card -->
             <div class="category">
               <img src="icons/agriculture.svg" alt="Agriculture Icon" />
               <p><span>451</span> Schemes</p>
               <h3>Agriculture, Rural & Environment</h3>
             </div>
 
-            <!-- Repeat cards -->
             <div class="category">
               <img src="icons/education.svg" alt="Education Icon" />
               <p><span>808</span> Schemes</p>
@@ -130,7 +133,6 @@
               <p><span>116</span> Schemes</p>
               <h3>Sports & Culture</h3>
             </div>
-            <!-- Add more categories as needed... -->
           </section>
         </main>
       </div>
