--- a/index.html
+++ b/index.html
@@ -60,13 +60,6 @@
 
     <section class="below">
       <div class="extra-selection">
-        <header>
-          <nav class="nav-tabs">
-            <a href="#" class="active">Categories</a>
-            <a href="#">States/UTs</a>
-            <a href="#">Central Ministries</a>
-          </nav>
-        </header>
 
         <main>
           <h1>
@@ -75,61 +68,61 @@
           </h1>
           <section class="grid">
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Agriculture.svg" alt="Agriculture Icon" />
               <p><span>451</span> Schemes</p>
               <h3>Agriculture, Rural & Environment</h3>
             </div>
 
             <div class="category">
-              <img src="icons/education.svg" alt="Education Icon" />
+              <img src="assets/Education.svg" alt="Education Icon" />
               <p><span>808</span> Schemes</p>
               <h3>Education & Learning</h3>
             </div>
 
             <div class="category">
-              <img src="icons/health.svg" alt="Health Icon" />
+              <img src="assets/Health.svg" alt="Health Icon" />
               <p><span>218</span> Schemes</p>
               <h3>Health & Wellness</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Banking Icon" />
+              <img src="assets/Banking.svg" alt="Banking Icon" />
               <p><span>221</span> Schemes</p>
               <h3>Banking,Financial Services and Insurance</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Housing Icon" />
+              <img src="assets/Housing.svg" alt="Housing Icon" />
               <p><span>92</span> Schemes</p>
               <h3>Housing & Shelter</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Public Safety.svg" alt="Agriculture Icon" />
               <p><span>10</span> Schemes</p>
               <h3>Public Safety,Law & Justice</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Science.svg" alt="Agriculture Icon" />
               <p><span>64</span> Schemes</p>
               <h3>Science, IT & Communications</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Skills.svg" alt="Agriculture Icon" />
               <p><span>264</span> Schemes</p>
               <h3>Skills & Employment</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Utility.svg" alt="Agriculture Icon" />
               <p><span>37</span> Schemes</p>
               <h3>Utility & Sanitation</h3>
             </div>
 
             <div class="category">
-              <img src="icons/agriculture.svg" alt="Agriculture Icon" />
+              <img src="assets/Sports.svg" alt="Agriculture Icon" />
               <p><span>116</span> Schemes</p>
               <h3>Sports & Culture</h3>
             </div>
