--- a/findScheme.html
+++ b/findScheme.html
@@ -5,22 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Scheme Saathi</title>
     <link rel="stylesheet" href="findScheme.css">
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <header class="navbar-container">
-        <nav class="navbar">
-            <div class="logo-name-container">
-                <img class="logo"  src="images/logo.png" alt="Logo"/>
-                <h1 class="logo-name">Scheme Saathi</h1>
+    <nav class="navbar">
+        <div class="logo-group">
+            <img src="assets/logo.png" alt="Main Logo" class="main-logo">
+            <div class="logo-text">
+                <span>Yojana</span>
+                <span>Mitra</span>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="findScheme.html">Find Scheme</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
+            <img src="assets/digital-india-logo.svg" alt="Digital India" class="digital-india-logo">
+        </div>
+  
+        <div class="search-container">
+            <input type="text" class="search-input" placeholder="Search schemes...">
+            <i class="fas fa-search search-icon"></i>
+        </div>
+  
+        <div class="nav-controls">
+            <select class="language-selector">
+                <option value="en">English</option>
+                <option value="hi">हिन्दी</option>
+            </select>
+            <button class="theme-toggle" aria-label="Toggle theme">
+                <i class="fas fa-moon"></i>
+            </button>
+        </div>
+  
+        <button class="hamburger" aria-label="Menu">
+            <i class="fas fa-bars"></i>
+        </button>
+    </nav>
     <div class="container">
         <h1>Government Scheme Finder</h1>
         <form id="userForm">
@@ -81,5 +108,6 @@
     </div>
 
    <script src="findscheme.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
