--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
   </head>
   <body>
     <nav class="navbar">
@@ -71,7 +73,7 @@
 
 
   <!-- main content <section></section> -->
-   
+
     <div class="gradient"></div>
     <section class="hero">
       <div class="left">
@@ -88,7 +90,7 @@
       </div>
       <div class="hero-bottom">
         #GOVERNMENTSCHEMES / #SCHEMESFORYOU
-        <button class="cta-button">Find Schemes For You →</button>
+      <a href="findScheme.html"> <button class="cta-button">Find Schemes For You →</button></a>
       </div>
 
       
