--- a/findScheme.html
+++ b/findScheme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Scheme Saathi</title>
+    <title>Yojana Mitra</title>
     <link rel="stylesheet" href="findScheme.css">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
     <link
