--- a/findScheme.html
+++ b/findScheme.html
@@ -49,6 +49,7 @@
         </button>
     </nav>
     <div class="container">
+        <div class="gradient"></div>
         <h1>Government Scheme Finder</h1>
         <form id="userForm">
             <div class="form-group">
