navbar - powered by removed

--- a/findScheme.html
+++ b/findScheme.html
@@ -74,7 +74,7 @@
   
     <div class="container">
         <div class="gradient"></div>
-        <h1>Government Scheme Finder</h1>
+        <h1>Find Schemes Made Just for You</h1>
         <form id="userForm">
             <div class="form-group">
                 <label for="gender">Gender</label>
