--- a/findScheme.html
+++ b/findScheme.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="form-group">
-                <label for="caste">Caste</label>
+                <label for="caste">Category</label>
                 <select id="caste" required>
                     <option value="">Select Caste</option>
                     <option value="General">General</option>
